<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/scroll_view"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_ssid"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="0dp"
            />

        <EditText
            android:id="@+id/SSID"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:textSize="20sp"
            android:typeface="monospace"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_ssid"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="0dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/password_area"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_hotspot"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="0dp"
                />

            <EditText
                android:id="@+id/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="0dp"
                android:textSize="20sp"
                android:typeface="monospace"
                android:fontFamily="sans-serif"
                android:hint=""
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight_characters"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:textSize="12sp"
                />

            <CheckBox
                android:id="@+id/show_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_password"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                />

        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/advanced_options"
            android:onClick="onAdvancedOptions"
            android:layout_margin="12dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>